made some changes

--- a/src/data/i18n/locales/en.json
+++ b/src/data/i18n/locales/en.json
@@ -24,10 +24,12 @@
     "heroSubtitle": "Tanzania's premier platform for finding and renting houses",
     "searchLocation": "Search location",
     "locationPlaceholder": "Enter location (e.g., Kinondoni, Temeke)",
+    "propertyType": "Property Type",
+    "allTypes": "All Types",
     "minPrice": "Min price",
     "maxPrice": "Max price",
     "searchButton": "Search Houses",
-    "mobileFilters": "Price Range (TZS)",
+    "mobileFilters": "Filters",
     "clearFilters": "Clear filters",
     "availableProperties": "Available properties",
     "majorCities": "Major cities",
