--- a/src/data/i18n/locales/sw.json
+++ b/src/data/i18n/locales/sw.json
@@ -24,10 +24,12 @@
     "heroSubtitle": "Jukwaa la kwanza la kutafuta na kupata nyumba za kukodi Tanzania",
     "searchLocation": "Tafuta eneo",
     "locationPlaceholder": "Ingiza eneo (mfano: Kinondoni, Temeke)",
+    "propertyType": "Aina ya Nyumba",
+    "allTypes": "Aina Zote",
     "minPrice": "Bei ya chini",
     "maxPrice": "Bei ya juu",
     "searchButton": "Tafuta Nyumba",
-    "mobileFilters": "Kiwango cha Bei (TZS)",
+    "mobileFilters": "Vichujio",
     "clearFilters": "Futa vichujio",
     "availableProperties": "Nyumba zinazopatikana",
     "majorCities": "Miji mikuu",
