rental manangement system setup

--- a/src/data/i18n/locales/en.json
+++ b/src/data/i18n/locales/en.json
@@ -404,8 +404,8 @@
     "addToList": "Add new property to your listings",
     "updateAccountInfo": "Update Account",
     "changeAccountDetails": "Change your account details",
-    "viewAnalytics": "View Analytics",
-    "viewPerformance": "View your properties' performance",
+    "manageRentals": "Manage Rentals",
+    "manageTenantsDesc": "Manage your tenants and leases",
     "quickHelp": "Quick Help",
     "contactSupport": "Contact our support team",
     "startNow": "Start Now!",
