--- a/src/data/i18n/locales/sw.json
+++ b/src/data/i18n/locales/sw.json
@@ -404,8 +404,8 @@
     "addToList": "Ongeza nyumba mpya kwenye orodha",
     "updateAccountInfo": "Sasisha Akaunti",
     "changeAccountDetails": "Badilisha maelezo ya akaunti yako",
-    "viewAnalytics": "Angalia Takwimu",
-    "viewPerformance": "Ona utendaji wa nyumba zako",
+    "manageRentals": "Simamia Upangaji",
+    "manageTenantsDesc": "Simamia wapangaji na mikataba",
     "quickHelp": "Msaada wa Haraka",
     "contactSupport": "Wasiliana na timu yetu ya msaada",
     "startNow": "Anza Sasa!",
